# medical-agents

./: .gitignore  00_INDEX.md  01_literature_review.md  02_system_architecture.md  03_bibliography.md  CLAUDE.md  README.md  pyproject.toml
agent-platform/: pyproject.toml
agent-platform/config/: agent_config.yaml  reward_weights.yaml  tool_costs.yaml
agent-platform/config/hospital_rules/: dementia_workup.yaml  first_seizure.yaml  general.yaml  meningitis.yaml  stroke_code.yaml
agent-platform/config/system_prompts/: llm_judge.md  orchestrator.txt  (+3 more)
agent-platform/docs/: architecture.md  dual-model-architecture.md  hospital-rules.md  improvement-plan.md  models.md  patient-data.md  quickstart.md  tools.md  web-api.md
agent-platform/scripts/: analyze_v4_results.py  create_v3_dataset.py  diversify_cases.py  evaluate_benchmark.py  interactive_demo.py  migrate_v3_to_v4.py  run_evaluation.py  run_full_benchmark.py  run_llm_judge.py  run_model_comparison.py  run_single_case.py  run_v3_comparison.py  run_v3_full.sh  run_v4_full.sh  serve_dual.sh  serve_model.sh  test_dual_model.py  test_v4_integration.py  vllm_serve.py
agent-platform/tests/: test_cost_tracker.py  test_evaluation.py  test_memory.py  test_mock_server.py  test_orchestrator.py  test_rules.py  test_tools.py  test_v4_tools.py
dataset-generation/: README.md  pyproject.toml
dataset-generation/config/: conditions.yaml  prompt_template.md  prompt_template_seeded.md
dataset-generation/docs/: external_case_sources.md
dataset-generation/scripts/: dataset_statistics.py  generate_batch.sh  generate_one.sh
(+858 files in other folders)
