[project]
name = "neuroagent"
version = "0.1.0"
description = "NeuroAgent agentic platform for neurological clinical decision support"
requires-python = ">=3.11"
dependencies = [
    "neuroagent-schemas",
    "pydantic>=2.0",
    "openai>=1.0",
    "instructor>=1.0",
    "chromadb",
    "pyyaml",
    "rich",
    "typer",
    "polars",
    "matplotlib",
    "seaborn",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroagent"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[tool.uv.sources]
neuroagent-schemas = { workspace = true }
